demonstrate Yaml and .h5
using pimas_indian_diabets dataset to demonstrate model serialization and deserialization using .h5 and Yaml

--- a/pimas_indian_diabets_savemodels.ipynb
+++ b/pimas_indian_diabets_savemodels.ipynb
@@ -15,6 +15,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Keras is a simple and powerful Python library for deep learning.\n",
+    "# \n",
+    "# Given that deep learning models can take hours, days and even weeks to train, it is \n",
+    "##important to know how to save and load them from disk.\n",
+    "# \n",
+    "# In this post, you will discover how you can save your Keras models to file and load them \n",
+    "##up again to make predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -270,7 +285,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Ref : https://machinelearningmastery.com/save-load-keras-deep-learning-models/"
+   ]
   }
  ],
  "metadata": {
